# MyPlayer

./: README.md
app/: build.gradle
app/src/androidTest/java/com/test/myplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  AudioChannel.h  BaseChannel.h  CMakeLists.txt  JniCallbackHelper.cpp  JniCallbackHelper.h  MyCPlayer.cpp  MyCPlayer.h  VideoChannel.cpp  VideoChannel.h  macro.h  native-lib.cpp  safe_queue.h
app/src/main/java/com/test/myplayer/: MainActivity.java  MyPlayer.java
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
